statefulset-thelounge.yaml
## StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thelounge
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: thelounge
  serviceName: "thelounge"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thelounge
    spec:
      containers:
      - name: thelounge
        image: ghcr.io/thelounge/thelounge:latest
        ports:
        - containerPort: 9000
          name: http-9000
        volumeMounts:
        - name: config
          mountPath: "/var/opt/thelounge"
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
