service-thelounge.yaml
## Service
---
apiVersion: v1
kind: Service
metadata:
   name: thelounge
   labels:
     app.kubernetes.io/name: thelounge
spec:
  type: ClusterIP
  ports:
  - port: 9000
  selector:
    app.kubernetes.io/name: thelounge
